--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,9 @@
     </label>
     <br>
     <br>
-    <label for="verify">Verify Password
-        <input name="verify" type="password" />
-        <span class="error">{{verify_error}}</span>
+    <label for="passcheck">Verify Password
+        <input name="passcheck" type="password" />
+        <span class="error">{{passcheck_error}}</span>
     </label>
     <br>
     <br>
